refactor(market-be): asset pricing strategy precision + macro fetch backoff + chart preference polish
normalize precision/native-currency handling across stock/forex/crypto/fund/commodity pricing strategies, harden MacroIndicatorFetchService retry logging, scope snapshot wipe to asset type in portfolio service, prune unused imports in user chart drawing/preference services